k8s/source-loader.yaml
apiVersion: v1
kind: Pod
metadata:
  name: assessment-source-loader
  namespace: assesment
spec:
  restartPolicy: Never
  containers:
    - name: node
      image: node:22-alpine
      command:
        - sh
        - -c
        - sleep 3600
      volumeMounts:
        - name: app-source
          mountPath: /workspace/app
  volumes:
    - name: app-source
      persistentVolumeClaim:
        claimName: assessment-app-source
