k8s/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: assessment-postgres
  namespace: assesment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: assessment-postgres
  template:
    metadata:
      labels:
        app: assessment-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: assessment-postgres-data
---
apiVersion: v1
kind: Service
metadata:
  name: assessment-postgres
  namespace: assesment
spec:
  selector:
    app: assessment-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
